[package]
name        = "ify-controller"
description = "infinityOS — blockControllerGenerator regime: controller lifecycle, ActionLog, block registry, orchestrator hooks, mesh artifact write path, node adder/customizer"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
ify-core   = { workspace = true }
tokio      = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
tracing    = { workspace = true }
