[package]
name        = "ify-interfaces"
description = "infinityOS — stable cross-layer API traits: EventBusApi, MeshArtifactApi, NodeExecutionApi, EditorIntegrationApi"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
ify-core   = { workspace = true }
tokio      = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
