[package]
name        = "ify-runtime"
description = "infinityOS — Rust Performer Runtime: agent executor, tool runner, memory subsystem, planner, sandbox, telemetry"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
ify-core     = { workspace = true }
ify-executor = { workspace = true }
ify-ffi      = { workspace = true }
tokio        = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
uuid         = { workspace = true }
