[package]
name        = "ify-security"
description = "infinityOS — Operational Security: input validation, audit trail, identity access control, artifact signing, sandboxed execution, secret management, supply chain protections, policy engine, and threat model."
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
ify-core       = { workspace = true }
ify-controller = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
tracing    = { workspace = true }
